--- a/src/app/features/auth/pages/login/login.component.html
+++ b/src/app/features/auth/pages/login/login.component.html
@@ -1,37 +1,44 @@
 <section class="bg-gradient-to-r from-cyan-500 min-h-screen  flex
 items-center justify-center">
 
-  <div class="bg-cyan-50 flex rounded-2xl shadow-xl  p-5 items-center max-w-4xl">
+  <div class="bg-cyan-50 flex rounded-2xl shadow-xl  p-5 items-center max-w-5xl ">
     <!-- Form -->
     <div class="md:w-1/2 px-16">
       <h2 class="text-2xl font-bold ">Iniciar Sesion</h2>
-      <p class="text-sm mt-4">Bievenido al consesionario de coches</p>
+      <p class="text-sm mt-3">Bievenido al consesionario de coches</p>
 
-      <form class=" flex flex-col gap-5">
+      <form [formGroup]="profileForm" class=" flex flex-col gap-5">
         <div class="pt-3 ">
-        <label for="emailUsername" class="pr-14 text-xl font-medium">Correo</label>
+        <label for="emailUsername" class="pr-14 text-xl font-medium italic">Correo</label>
         <input
-          class="mt-3 p-2 rounded-x1 border w-60 sm:flex-col"
+          autofocus
+          class="mt-3 p-2 rounded-x1 border w-60 sm:flex-col "
           placeholder="Correo"
           type="email"
           id="emailUsername"
-          [(ngModel)]="emailUsername"
+          formControlName="emailUser"
           name = "username"
-          required/>
+          />
       </div>
 
         <div class="pt-3 ">
-          <label for="password" class="pr-3 text-xl font-medium">Contrasenia</label>
+          <label for="password" class=" italic
+          pr-3 text-xl font-medium">Contraseña</label>
           <input
+
             class="mt-3 p-2 rounded-x1 border w-60"
-            placeholder="Contrasenia"
+            placeholder="Contraseña"
             type="password"
+            formControlName="passwordUser"
             id="password"
-            [(ngModel)]="passwordUsername"
             name = "password"
-            required/>
+            />
         </div>
-        <button class="bg-gradient-to-br from-cyan-950  rounded-2xl text-sky-50 font-bold  py-2 hover:scale-110 duration-300" (click)="signIp()">Ingresar</button>
+
+        <button class="bg-gradient-to-br from-cyan-950  shadow-xl rounded-2xl text-sky-50 font-bold  py-2 hover:scale-110 duration-300" (click)="signIp()">Ingresar</button>
+
+
+
       </form>
 
       <div class="mt-10 grid grid-cols-3 items-center text-gray-700">
@@ -42,8 +49,8 @@ items-center justify-center">
 
       <div class="mt-3 text-xs flex justify-between items-center">
         <p>Si no tienes una cuenta</p>
-        <button class="py-2 px-5 bg-sky-500 rounded-xl text-sky-50 font-bold hover:scale-110 duration-300">
-          <a routerLink="/authentication/register">Registrate Aqui</a>
+        <button (click)="signUp()" class="py-2 px-5 bg-sky-500 rounded-xl text-sky-50 font-bold hover:scale-110 duration-300">
+          Registrate Aqui
         </button>
       </div>
 
@@ -52,8 +59,8 @@ items-center justify-center">
     <div class="md:block hidden w-1/2 ">
       <img
         class="  rounded-2xl"
-        src="./assets/coche2.jpg"
-        alt="coche login">
+        ngSrc="./assets/coche2.jpg"
+        alt="coche login" height="1072" width="564" priority>
 
 
     </div>
