--- a/src/app/features/auth/pages/register/register.component.html
+++ b/src/app/features/auth/pages/register/register.component.html
@@ -43,7 +43,7 @@ items-center justify-center">
         </div>
 
         <div class="pt-3 ">
-          <label for="emailUsername" class="pr-14 text-xl font-medium">Correo</label>
+          <label for="emailUsername" class="pr-3 text-xl font-medium">Correo</label>
           <input
             class="mt-3 p-2 rounded-x1 border w-60 sm:flex-col"
             placeholder="Correo"
@@ -76,7 +76,7 @@ items-center justify-center">
 
       <div class="mt-3 text-xs flex justify-between items-center">
         <p>Ya tengo una cuenta</p>
-        <button class="py-2 px-5 bg-sky-500 rounded-xl text-sky-50 font-bold hover:scale-110 duration-300"><a routerLink="/authentication/login">Iniciar Sesion</a></button>
+        <button (click)="signIn()" class="py-2 px-5 bg-sky-500 rounded-xl text-sky-50 font-bold hover:scale-110 duration-300">Iniciar Sesion</button>
       </div>
 
     </div>
@@ -84,9 +84,8 @@ items-center justify-center">
     <div class="md:block hidden w-1/2 ">
       <img
         class="  rounded-2xl"
-        src="./assets/coche1.jpg"
-        alt="coche login">
-
+        ngSrc="./assets/coche1.jpg"
+        alt="coche login" height="1002" width="564" priority>
 
     </div>
   </div>
