--- a/src/app/features/auth/pages/register/register.component.html
+++ b/src/app/features/auth/pages/register/register.component.html
@@ -7,86 +7,115 @@ items-center justify-center">
       <h2 class="text-2xl font-bold ">Registro</h2>
       <p class="text-sm mt-4">Bievenido al consesionario de coches</p>
 
-      <form class=" flex flex-col gap-1">
-        <div class="pt-3 ">
-          <label for="name" class="pr-3 text-xl font-medium">Nombre</label>
-          <input
-            class="mt-3 p-2 rounded-x1 border w-60"
-            placeholder="Nombre"
-            type="text"
-            id="name"
-            [(ngModel)]="nameUsername"
-            name = "password"
-            required/>
-        </div>
-        <div class="pt-3 ">
-          <label for="lastname" class="pr-3 text-xl font-medium">Apellido</label>
-          <input
-            class="mt-3 p-2 rounded-x1 border w-60"
-            placeholder="Apellido"
-            type="text"
-            id="lastname"
-            [(ngModel)]="lastNameUsername"
-            name = "password"
-            required/>
-        </div>
-        <div class="pt-3 ">
-          <label for="dni" class="pr-3 text-xl font-medium">Cedula</label>
-          <input
-            class="mt-3 p-2 rounded-x1 border w-60"
-            placeholder="Cedula"
-            type="text"
-            id="dni"
-            [(ngModel)]="dniUsername"
-            name = "password"
-            required/>
+    @if(!registered){
+        <form role="form" [formGroup]="userDataForm" class=" flex flex-col gap-1" >
+          <div class="pt-3 ">
+            <label for="name" class="pr-3 text-xl font-medium">Nombre</label>
+            <input
+              class="mt-3 p-2 rounded-x1 border w-60"
+              placeholder="Nombre"
+              type="text"
+              id="name"
+              formControlName="nameUsername"
+              name = "password"
+              required/>
+          </div>
+          <div class="pt-3 ">
+            <label for="lastname" class="pr-3 text-xl font-medium">Apellido</label>
+            <input
+              class="mt-3 p-2 rounded-x1 border w-60"
+              placeholder="Apellido"
+              type="text"
+              id="lastname"
+              formControlName="lastNameUsername"
+              name = "password"
+              required/>
+          </div>
+          <div class="pt-3 ">
+            <label for="dni" class="pr-3 text-xl font-medium">Cedula</label>
+            <input
+              class="mt-3 p-2 rounded-x1 border w-60"
+              placeholder="Cedula"
+              type="number"
+              id="dni"
+              formControlName="dniUsername"
+              name = "password"
+              required/>
+          </div>
+
+          <div class="pt-3 ">
+            <label for="emailUsername" class="pr-3 text-xl font-medium">Correo</label>
+            <input
+              class="mt-3 p-2 rounded-x1 border w-60 sm:flex-col"
+              placeholder="Correo"
+              type="email"
+              id="emailUsername"
+              formControlName="emailUsername"
+              name = "username"
+              required/>
+
+          </div>
+
+          <div class="pt-3 ">
+            <label for="phone" class="pr-3 text-xl font-medium">Telefono</label>
+            <input
+              class="mt-3 p-2 rounded-x1 border w-60"
+              placeholder="Telefono"
+              type="number"
+              id="phone"
+              formControlName="phoneUsername"
+              name = "phone"
+              required/>
+          </div>
+          <button (click)="register()" class="bg-gradient-to-br from-cyan-950  rounded-2xl text-sky-50 font-bold  py-2 hover:scale-110 duration-300 mt-4">Registrar</button>
+        </form>
+        <div class="mt-10 grid grid-cols-3 items-center text-gray-700">
+          <hr class="border-gray-700">
+          <p class="text-center">OR</p>
+          <hr class="border-gray-700">
         </div>
 
-        <div class="pt-3 ">
-          <label for="emailUsername" class="pr-3 text-xl font-medium">Correo</label>
-          <input
-            class="mt-3 p-2 rounded-x1 border w-60 sm:flex-col"
-            placeholder="Correo"
-            type="email"
-            id="emailUsername"
-            [(ngModel)]="emailUsername"
-            name = "username"
-            required/>
+        <div class="mt-3 text-xs flex justify-between items-center">
+          <p>Ya tengo una cuenta</p>
+          <button (click)="signIn()" class="py-2 px-5 bg-sky-500 rounded-xl text-sky-50 font-bold hover:scale-110 duration-300">Iniciar Sesion</button>
+        </div>
+    } @else {
+
+      @defer {
+        <div class="bg-slate-700 from-sky-950 flex flex-col justify-center items-center rounded-2xl p-10 mt-4 shadow-2xl">
+          <h1 class="text-white  font-medium text-4xl mb-4">¡Gracias por registrarte!</h1>
+          <h2 class="text-white font-medium text-3xl mb-4">Esta es tu nueva contraseña:</h2>
+          <p class="italic text-red-50 underline font-bold text-3xl">{{ this.passwordResultRegister}}</p>
+          <button class="m-5 p-5 bg-sky-500 rounded-xl text-sky-50  hover:scale-110 duration-300 font-medium" (click)="signIn()">Iniciar Sesion</button>
         </div>
 
-        <div class="pt-3 ">
-          <label for="phone" class="pr-3 text-xl font-medium">Telefono</label>
-          <input
-            class="mt-3 p-2 rounded-x1 border w-60"
-            placeholder="Telefono"
-            type="number"
-            id="phone"
-            [(ngModel)]="phoneUsername"
-            name = "phone"
-            required/>
-        </div>
-        <button class="bg-gradient-to-br from-cyan-950  rounded-2xl text-sky-50 font-bold  py-2 hover:scale-110 duration-300 mt-4">Registrar</button>
-      </form>
+        <button class="m-5 p-5"></button>
 
-      <div class="mt-10 grid grid-cols-3 items-center text-gray-700">
-        <hr class="border-gray-700">
-        <p class="text-center">OR</p>
-        <hr class="border-gray-700">
-      </div>
+      } @placeholder {
+        <p> Guardando registro</p>
+      } @loading(minimum  3s){
+        <p class="text-stale-700 justify-center items-center text-center font-bold p-5 m-5">Creando tu llave ...</p>
+      }
 
-      <div class="mt-3 text-xs flex justify-between items-center">
-        <p>Ya tengo una cuenta</p>
-        <button (click)="signIn()" class="py-2 px-5 bg-sky-500 rounded-xl text-sky-50 font-bold hover:scale-110 duration-300">Iniciar Sesion</button>
-      </div>
+    }
+
+
+
+
 
     </div>
+
+
     <!--image-->
     <div class="md:block hidden w-1/2 ">
+
       <img
         class="  rounded-2xl"
-        ngSrc="./assets/coche1.jpg"
-        alt="coche login" height="1002" width="564" priority>
+        src="./assets/coche1.jpg"
+        alt="coche login" height="1002" width="564">
 
     </div>
+
+
   </div>
 </section>
