--- a/src/app/features/home/pages/inventory/inventory.component.html
+++ b/src/app/features/home/pages/inventory/inventory.component.html
@@ -2,4 +2,53 @@
 <header>
   <app-navbar></app-navbar>
 </header>
-<p class="text-red-500">inventory works!</p>
+<main class="p-4 bg-sky-300 min-h-screen">
+  <div class="mx-auto  grid max-w-1/2 gap-4 md:grid-cols-3 lg:grid-cols-4">
+    @for (carProduct of listCars ; track  carProduct.serial){
+      <article class="bg-sky-100 shadow overflow-hidden rounded-xl">
+        <div class="h-52">
+          <img
+            class="h-full w-full object-cover object-center"
+            src="{{carProduct.pathImage}}"
+            alt="carro"
+          />
+        </div>
+        <div class="space-y-3 p-5">
+          <h3 class="font-bold text-xl text-sky-500 ">
+            {{carProduct.brandCarEntity}} | {{carProduct.category}}</h3>
+          <h4 class="font-bold italic text-sm text-black">{{carProduct.reference}}</h4>
+          <h2 class="text-xl font-semibold text-slate-800 leading-tight">
+           Caracteristicas
+          </h2>
+          <div class="text-black">
+            <h3 class="font-semibold text-xl italic text-blue-500">Básica</h3>
+            <p class="text-black">Año:</p>
+            <p>Modelo: {{carProduct.brandCarEntity}}</p>
+            <p>Stock: {{carProduct.stock}}</p>
+          </div>
+
+          <div class="text-black">
+            <h3 class="font-semibold text-xl italic text-blue-500">Mecánica</h3>
+            <p>Caballos de fuerza: {{carProduct.horsePower}}</p>
+            <p>Cilindraje: {{carProduct.engineDisplacement}}</p>
+            <p>Tipo Combustible: {{carProduct.fuelType}}</p>
+            <p>Dirección: {{carProduct.steering}}</p>
+          </div>
+
+          <div class="text-black">
+            <h3 class="font-semibold text-xl italic text-blue-500">Estética</h3>
+            <p>Color: {{carProduct.color}}</p>
+            <p>Número de Puertas: {{carProduct.numberDoor}}</p>
+            <p>Número de Asientos: {{carProduct.numberSeats}}</p>
+          </div>
+
+          <p class="text-black text-xl">💲{{carProduct.price}}</p>
+        </div>
+        <div class="flex p-5 space-x-2">
+          <button class="bg-blue-900  text-slate-100 shadow-xl rounded-2xl font-bold  py-2 px-2 hover:scale-110 duration-300" >Anadir al Carrito</button>
+          <button  class="bg-red-400  text-slate-100 shadow-xl rounded-2xl font-bold  px-2 hover:scale-110 duration-300">Sacar del Carrito</button>
+        </div>
+      </article>
+    }
+  </div></main>
+
