--- a/src/app/features/admin/components/info-aesthetic-form/info-aesthetic-form.component.html
+++ b/src/app/features/admin/components/info-aesthetic-form/info-aesthetic-form.component.html
@@ -1,9 +1,9 @@
-<div class="bg-gradient-to-br from-sky-200 p-6 rounded-lg shadow-lg">
+<div class="bg-gradient-to-br from-blue-950 p-6 rounded-lg shadow-lg">
   <form  [formGroup]="infoAestheticForm"  class="w-full max-w-sm">
     <!-- color -->
     <div class="md:flex md:items-center mb-6">
       <div class="md:w-1/3">
-        <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4">
+        <label class="block text-white font-bold md:text-right mb-1 md:mb-0 pr-4">
           Color
         </label>
       </div>
@@ -15,7 +15,7 @@
     <!-- numberDoor -->
     <div class="md:flex md:items-center mb-6">
       <div class="md:w-1/3">
-        <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4">
+        <label class="block text-white font-bold md:text-right mb-1 md:mb-0 pr-4">
           Numero de Puertas
         </label>
       </div>
@@ -26,7 +26,7 @@
     <!-- numberSeats -->
     <div class="md:flex md:items-center mb-6">
       <div class="md:w-1/3">
-        <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4">
+        <label class="block text-white font-bold md:text-right mb-1 md:mb-0 pr-4">
           Numero de Asientos
         </label>
       </div>
@@ -38,7 +38,7 @@
     <!-- Path Image -->
     <div class="md:flex md:items-center mb-6">
       <div class="md:w-1/3">
-        <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4">
+        <label class="block text-white font-bold md:text-right mb-1 md:mb-0 pr-4">
           Link Imagen del Auto
         </label>
       </div>
