--- a/src/app/features/admin/components/info-basic-form/info-basic-form.component.html
+++ b/src/app/features/admin/components/info-basic-form/info-basic-form.component.html
@@ -1,9 +1,9 @@
-<div class="bg-gradient-to-br from-sky-200 p-6 rounded-lg shadow-lg">
+<div class="bg-gradient-to-br from-blue-950 p-6 rounded-lg shadow-lg">
 <form  [formGroup]="infoBasicForm"  class="w-full max-w-sm">
   <!--  BrandCardId -->
   <div class="md:flex md:items-center mb-6">
     <div class="md:w-1/3">
-      <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="brandcars">
+      <label class="block text-white font-bold md:text-right mb-1 md:mb-0 pr-4" for="brandcars">
         Seleciona una marca de coche
       </label>
     </div>
@@ -19,7 +19,7 @@
   <!-- Referencia -->
   <div class="md:flex md:items-center mb-6">
     <div class="md:w-1/3">
-      <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4">
+      <label class="block text-white font-bold md:text-right mb-1 md:mb-0 pr-4">
         Referencia
       </label>
     </div>
@@ -31,7 +31,7 @@
   <!--  Price -->
   <div class="md:flex md:items-center mb-6">
     <div class="md:w-1/3">
-      <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4">
+      <label class="block text-white font-bold md:text-right mb-1 md:mb-0 pr-4">
         Precio
       </label>
     </div>
@@ -42,7 +42,7 @@
   <!-- YearModel -->
   <div class="md:flex md:items-center mb-6">
     <div class="md:w-1/3">
-      <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4">
+      <label class="block text-white font-bold md:text-right mb-1 md:mb-0 pr-4">
         Año modelo
       </label>
     </div>
@@ -54,7 +54,7 @@
   <!--  Category -->
   <div class="md:flex md:items-center mb-6">
     <div class="md:w-1/3">
-      <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4">
+      <label class="block text-white font-bold md:text-right mb-1 md:mb-0 pr-4">
         Categoria
       </label>
     </div>
@@ -65,7 +65,7 @@
   <!-- Stock -->
   <div class="md:flex md:items-center mb-6">
     <div class="md:w-1/3">
-      <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4">
+      <label class="block text-white font-bold md:text-right mb-1 md:mb-0 pr-4">
         Stock
       </label>
     </div>
