--- a/src/app/features/admin/components/info-machine-form/info-machine-form.component.html
+++ b/src/app/features/admin/components/info-machine-form/info-machine-form.component.html
@@ -1,9 +1,9 @@
-<div class="bg-gradient-to-br from-sky-200 p-6 rounded-lg shadow-lg">
+<div class="bg-gradient-to-br from-blue-950 p-6 rounded-lg shadow-lg">
   <form  [formGroup]="infoMachineForm"  class="w-full max-w-sm">
     <!-- Caballos de Fuerza -->
     <div class="md:flex md:items-center mb-6">
       <div class="md:w-1/3">
-        <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4">
+        <label class="block text-white font-bold md:text-right mb-1 md:mb-0 pr-4">
           Caballos de Fuerza
         </label>
       </div>
@@ -15,7 +15,7 @@
     <!--  engineDisplacement -->
     <div class="md:flex md:items-center mb-6">
       <div class="md:w-1/3">
-        <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4">
+        <label class="block text-white font-bold md:text-right mb-1 md:mb-0 pr-4">
           Cilindraje
         </label>
       </div>
@@ -26,7 +26,7 @@
     <!-- transmission -->
     <div class="md:flex md:items-center mb-6">
       <div class="md:w-1/3">
-        <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4">
+        <label class="block text-white font-bold md:text-right mb-1 md:mb-0 pr-4">
           Transmision
         </label>
       </div>
@@ -38,7 +38,7 @@
     <!--  Fuel Type -->
     <div class="md:flex md:items-center mb-6">
       <div class="md:w-1/3">
-        <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4">
+        <label class="block text-white font-bold md:text-right mb-1 md:mb-0 pr-4">
           Tipo de Combustible
         </label>
       </div>
@@ -49,7 +49,7 @@
     <!-- Traccion -->
     <div class="md:flex md:items-center mb-6">
       <div class="md:w-1/3">
-        <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4">
+        <label class="block text-white font-bold md:text-right mb-1 md:mb-0 pr-4">
           Traccion
         </label>
       </div>
@@ -60,7 +60,7 @@
     <!-- Steering -->
     <div class="md:flex md:items-center mb-6">
       <div class="md:w-1/3">
-        <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4">
+        <label class="block text-white font-bold md:text-right mb-1 md:mb-0 pr-4">
           Direccion
         </label>
       </div>
