realizacion de facturazacion , shopping cart and about me

--- a/src/app/features/admin/pages/register-car/register-car.component.html
+++ b/src/app/features/admin/pages/register-car/register-car.component.html
@@ -1,7 +1,7 @@
 <header>
   <app-navbar></app-navbar>
 </header>
-<main class="min-h-screen bg-sky-300 pt-4">
+<main class="min-h-screen bg-gray-100 pt-4">
   <div class="flex justify-center space-x-4 mt-4 ">
     <button (click)="showBasicForm()" class="bg-blue-700 hover:bg-blue-900 text-white font-bold py-2 px-4 rounded-xl"> Registrar Informacion Basica </button>
     <button (click)="showMechanicalForm()" class="bg-blue-700 hover:bg-blue-900 text-white font-bold py-2 px-4 rounded-xl"> Registrar Informacion Mecanica </button>
