--- a/src/app/features/admin/components/info-basic-form/info-basic-form.component.html
+++ b/src/app/features/admin/components/info-basic-form/info-basic-form.component.html
@@ -1,4 +1,4 @@
-<div class="bg-gradient-to-br from-blue-950 p-6 rounded-lg shadow-lg">
+<div class="bg-gray-600 p-6 rounded-lg shadow-lg">
 <form  [formGroup]="infoBasicForm"  class="w-full max-w-sm">
   <!--  BrandCardId -->
   <div class="md:flex md:items-center mb-6">
