--- a/src/app/features/auth/pages/register/register.component.html
+++ b/src/app/features/auth/pages/register/register.component.html
@@ -67,6 +67,19 @@ items-center justify-center">
               name = "phone"
               required/>
           </div>
+
+          <div class="pt-3 ">
+            <label for="password" class="pr-3 text-xl font-medium">Contraseña</label>
+            <input
+              class="mt-3 p-2 rounded-x1 border w-60"
+              placeholder="12345"
+              type="password"
+              id="password"
+              formControlName="passwordUsername"
+              name = "password"
+              required/>
+          </div>
+
           <button (click)="register()" class="bg-gradient-to-br from-cyan-950  rounded-2xl text-sky-50 font-bold  py-2 hover:scale-110 duration-300 mt-4">Registrar</button>
         </form>
         <div class="mt-10 grid grid-cols-3 items-center text-gray-700">
@@ -84,8 +97,8 @@ items-center justify-center">
       @defer {
         <div class="bg-slate-700 from-sky-950 flex flex-col justify-center items-center rounded-2xl p-10 mt-4 shadow-2xl">
           <h1 class="text-white  font-medium text-4xl mb-4">¡Gracias por registrarte!</h1>
-          <h2 class="text-white font-medium text-3xl mb-4">Esta es tu nueva contraseña:</h2>
-          <p class="italic text-red-50 underline font-bold text-3xl">{{ this.passwordResultRegister}}</p>
+          <h2 class="text-white font-medium text-3xl mb-4">Bienvenido</h2>
+          <p class="italic text-red-50 underline font-bold text-3xl">{{ this.userNameResultRegister}}</p>
           <button class="m-5 p-5 bg-sky-500 rounded-xl text-sky-50  hover:scale-110 duration-300 font-medium" (click)="signIn()">Iniciar Sesion</button>
         </div>
 
