--- a/src/app/features/home/pages/aboutme/aboutme.component.html
+++ b/src/app/features/home/pages/aboutme/aboutme.component.html
@@ -25,7 +25,7 @@
                 <li class="mb-2">Spring Boot</li>
 
                 @defer(){
-                  <li class="mb-2">Rust</li>
+                  <li class="mb-2">Secret</li>
                 }@loading (minimum  7s){
                   <p class="text-sm font-semibold text-red-400">Future Skill ..</p>
                 }
