--- a/src/app/features/auth/pages/login/login.component.html
+++ b/src/app/features/auth/pages/login/login.component.html
@@ -35,8 +35,8 @@ items-center justify-center">
             />
         </div>
 
-        <button class="bg-gradient-to-br from-cyan-950  shadow-xl rounded-2xl text-sky-50 font-bold  py-2 hover:scale-110 duration-300" (click)="signIp()">Ingresar</button>
 
+        <button class="bg-gradient-to-br from-cyan-950  shadow-xl rounded-2xl text-sky-50 font-bold  py-2 hover:scale-110 duration-300" (keyup.enter)="signIp()" (click)="signIp()">Ingresar</button>
 
 
       </form>
@@ -45,6 +45,9 @@ items-center justify-center">
         <hr class="border-gray-700">
         <p class="text-center">OR</p>
         <hr class="border-gray-700">
+      </div>
+      <div class=" text-xs flex justify-between items-center">
+        <a class="underline font-semibold italic text-blue-500 hover:text-blue-800" (click)="forgotPassword()">Se me olvido de la contraseña</a>
       </div>
 
       <div class="mt-3 text-xs flex justify-between items-center">
