--- a/src/app/features/auth/pages/forgot-password/forgot-password.component.html
+++ b/src/app/features/auth/pages/forgot-password/forgot-password.component.html
@@ -1,8 +1,8 @@
 <!-- component -->
-<div class="flex justify-center items-center min-h-screen bg-slate-100">
+<div class="flex justify-center items-center min-h-screen bg-gradient-to-r from-cyan-500">
 
     @if(!verifyCorrect){
-      <div class="max-w-lg mx-auto my-10 bg-white p-8 rounded-xl shadow shadow-slate-300">
+      <div class="max-w-lg mx-auto my-10 bg-cyan-50 p-8 rounded-xl shadow shadow-slate-300">
         <h1 class="text-4xl font-medium py-2">Ingrese su cedula</h1>
         <p class="text-slate-500">Ingrese su cedula con la que se registro</p>
 
@@ -30,7 +30,7 @@
         </form>
       </div>
     }@else {
-      <div class="max-w-lg mx-auto my-10 bg-white p-8 rounded-xl shadow shadow-slate-300">
+      <div class="max-w-lg mx-auto my-10  bg-cyan-50 p-10 px-16 rounded-xl shadow shadow-slate-300">
         <h1 class="text-4xl font-medium py-2">Perfecto</h1>
         <p class="text-slate-500">Ingrese su nueva Contraseña</p>
 
