--- a/src/app/features/auth/pages/login/login.component.html
+++ b/src/app/features/auth/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <section class="bg-gradient-to-r from-cyan-500 min-h-screen  flex
 items-center justify-center">
 
-  <div class="bg-cyan-50 flex rounded-2xl shadow-xl  p-5 items-center max-w-5xl ">
+  <div class="bg-cyan-50 flex rounded-2xl shadow-xl  p-5 items-center max-w-4xl ">
     <!-- Form -->
     <div class="md:w-1/2 px-16">
       <h2 class="text-2xl font-bold ">Iniciar Sesion</h2>
@@ -46,12 +46,12 @@ items-center justify-center">
         <p class="text-center">OR</p>
         <hr class="border-gray-700">
       </div>
-      <div class=" text-xs flex justify-between items-center">
-        <a class="underline font-semibold italic text-blue-500 hover:text-blue-800" (click)="forgotPassword()">Se me olvido de la contraseña</a>
+      <div class=" text-xs  flex justify-between items-center">
+        <a class="underline text-lg text-indigo-600 font-medium cursor-pointer" (click)="forgotPassword()">Se me olvido de la contraseña</a>
       </div>
 
-      <div class="mt-3 text-xs flex justify-between items-center">
-        <p>Si no tienes una cuenta</p>
+      <div class="mt-7 text-xs flex justify-between items-center">
+        <p class="text-sm">Si no tienes una cuenta</p>
         <button (click)="signUp()" class="py-2 px-5 bg-sky-500 rounded-xl text-sky-50 font-bold hover:scale-110 duration-300">
           Registrate Aqui
         </button>
