--- a/src/app/features/auth/pages/register/register.component.html
+++ b/src/app/features/auth/pages/register/register.component.html
@@ -36,7 +36,7 @@ items-center justify-center">
             <input
               class="mt-3 p-2 rounded-x1 border w-60"
               placeholder="Cedula"
-              type="number"
+              type="text"
               id="dni"
               formControlName="dniUsername"
               name = "password"
